k8s/ingress-nginx/ingress-web-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: web-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web-app-poc.fr  
      secretName: webapp-tls-secret 
  rules:
    - host: web-app-poc.fr  
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: go-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-service
                port:
                  number: 80
